--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fontsource/inter": "^5.2.6",
     "classnames": "^2.5.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
